<resources>

    <string name="app_name">水木社区</string>
    <string name="menu_settings">Settings</string>
    
    <!-- login -->
    <string name="label_login_name">帐号</string>
    <string name="label_login_pass">密码</string>
    <string name="label_login_enter">登录</string>
    <string name="label_login_guest">游客</string>
    <string name="label_website_link">还没有帐号？  <a href="http://www.newsmth.net/nForum/#!reg">注册</a></string>
    <string name="label_hint_name">guest</string>
    <string name="label_hint_pass">******</string>
    
    <!-- navbar -->
    <string name="label_navbar_home">首页</string>
    <string name="label_navbar_hot">十大</string>
    <string name="label_navbar_msg">消息</string>
    <string name="label_navbar_search">搜索</string>
    <string name="label_navbar_more">更多</string>
    
    <string-array name="label_navbar_tags">
        <item>@string/label_navbar_home</item>
        <item>@string/label_navbar_hot</item>
        <item>@string/label_navbar_msg</item>
        <item>@string/label_navbar_search</item>
        <item>@string/label_navbar_more</item>    
    </string-array>
    
    <!-- post -->
    <string name="label_post_rank" formatted = "false">%d.[%s]%s</string>
    <string name="label_post_author" formatted = "false">来自%s</string>
    
    <!-- group -->
    <string-array name="label_hot_group">
        <item>全站热点</item>
        <item>国内院校 </item>
        <item>休闲娱乐</item>
        <item>游戏天地</item> 
        <item>体育健身</item> 
        <item>社会信息</item> 
        <item>知性感性 </item> 
        <item>文化人文</item> 
        <item>学术科学</item> 
        <item>电脑技术</item>
    </string-array>
    
    <string name="label_search_group">选择需要关注的版面</string>
    <string name="label_hint_search_group">请选择你关注的版面</string>
    
</resources>